feat: mini calendar

--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -19,6 +19,7 @@
     --active-nav-history-link-color: var(--color-purple);
 
     --Purple-Dark-color: var(--color-purple);
+    --Purple-light-dark: var(--color-purple-light);
 
     --Calendar-color: var(--color-light);
 }
