--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -18,6 +18,7 @@
 
     --active-nav-history-link-color: var(--color-purple-light);
 
+    --Purple-light-dark: var(--color-purple);
     --Purple-Dark-color: var(--color-dark);
 
     --Calendar-color: var(--color-gold-light);
