--- a/src/widgets/Calendars/CalendarMini/ui/Calendar.module.scss
+++ b/src/widgets/Calendars/CalendarMini/ui/Calendar.module.scss
@@ -2,6 +2,8 @@
 
 .Calendar {
   width: 244px;
+  user-select: none;
+  -webkit-user-select: none;
 
   .wrapper {
     border: 1px solid var(--Purple-Dark-color);
@@ -22,6 +24,7 @@
   }
 
   :global {
+    
     .react-datepicker__header {
       padding: 0 !important;
       border-bottom: none;
@@ -40,48 +43,43 @@
       }
     }
 
-    .react-datepicker__day--outside-month {
-      color: grey;
-      @include hover {
-        color: var(--color-light);
-      }
-    }
+
 
     .react-datepicker__day {
+      color: var(--color-theme);
+
+      &.react-datepicker__day--selected {
+        background-color: var(--active-nav-history-link-color);
+        color: var(--color-light);
+        font-weight: 700;
+      }
+
+      &.react-datepicker__day--outside-month {
+        color: grey;
+        @include hover {
+          color: var(--color-light);
+        }
+      }
+
       &.react-datepicker__day--today {
         border: 1px solid var(--Purple-Dark-color);
         border-radius: var(--border-radius);
         font-weight: bold;
-        background-color: transparent;
         color: var(--color-gray);
 
-        @include hover {
+        &.react-datepicker__day--selected {
           background-color: var(--active-nav-history-link-color);
+          color: var(--color-light);
+          font-weight: 700;
         }
       }
       &.react-datepicker__day--keyboard-selected {
-        background-color: var(--active-nav-history-link-color);
-        color: var(--color-light);
-        font-weight: 700;
-        color: var(--color-light);
-        @include hover {
-          background-color: var(--active-nav-history-link-color);
-        }
+        background-color: transparent;
       }
-    }
-  }
 
-  .monthOutDays {
-    color: var(--color-gray);
-    @include hover {
-      background-color: var(--active-nav-history-link-color);
-    }
-  }
-
-  .monthDays {
-    color: var(--color-theme);
-    @include hover {
-      background-color: var(--active-nav-history-link-color);
+      @include hover {
+        background-color: var(--active-nav-history-link-color);
+      }
     }
   }
 
