--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -57,6 +57,10 @@ tr:hover td{
 
   }
 
+  .active {
+    background-color: var(--color-select-table) !important;
+  }
+
   .fixed {
     top: 0;
     z-index: 2;
@@ -64,6 +68,10 @@ tr:hover td{
     position: sticky;
     background-color: white;
   }
+
+  // .active {
+  //   background-color: var(--color-select-table);
+  // }
   
   .sorting{
     overflow: hidden;
