--- a/src/widgets/FilterModal/FilterModal.module.scss
+++ b/src/widgets/FilterModal/FilterModal.module.scss
@@ -2,36 +2,70 @@
 
 .props {
   display: block;
+  width: 100%;
+  height: 100%;
   align-items: center;
-  padding-inline: 12px;
   border-bottom: 2px solid transparent;
   font-weight: 500;
-  font-size: 13px;
+  font-size: 14px;
   transition-duration: 0s;
+  position: relative;
 }
 
 .propsWithButton {
-    border: 2px solid var(--color-purple-light);
-    border-radius:  5%;
+  display: block;
+  min-width: none;
+  min-height: 1200%;
+  border: 1px solid var(--color-purple-light);
+  border-radius: 6px;
+  padding: 9px;
 }
 
-.props .propItem {
-  @include hover {
-    border: 2px solid var(--color-purple-light);
-    background-color: var(--active-nav-history-link-color);
+.activeProp button {
+  position: relative;
+  top: auto;
+  text-align: left;
+  width: 100%;
+  max-height: 30px;
+  border: 4px solid var(--active-nav-history-link-color);
+  background-color: var(--color-purple-light);
+}
 
-    * {
-      &::after,
-      &::before {
-        background-color: var(--active-nav-history-link-color);
-      }
-    }
+.activeProperty {
+  position: relative;
+  top: auto;
+  text-align: left;
+  width: 100%;
+  color: #ffffff;
+  max-height: 30px;
+  border: 4px solid var(--active-nav-history-link-color);
+  background-color: var(--color-purple-light);
+
+  &::before {
+    content: "";
+    position: absolute;
+    @include square(14px);
+    translate: -100% 20%;
+    background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
   }
 }
 
-.activeProp {
-  border: 4px solid var(--active-nav-history-link-color);
-  background-color: var(--color-purple-light);
+.unactiveProperty {
+  position: relative;
+  width: 100%;
+  text-align: left;
+  font-weight: 500;
+  font-size: 15px;
+  transition-duration: 0s;
+  border-bottom: 1px solid transparent;
+
+  &::before {
+    content: "";
+    position: absolute;
+    @include square(14px);
+    translate: -100% 30%;
+    background-image: url(../../shared/assets/icons/dropArrow/drop-right.svg);
+  }
 }
 
 .dropListButton {
@@ -44,17 +78,41 @@
   transition-duration: 0s;
   border-bottom: 1px solid transparent;
 
-
   &::before {
-      content: '';
-      position: absolute;
-      @include square(14px);
-      top: calc(var(--button-height) /2);
-      left: 100%;
-      translate: -100% -50%;
-      background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
+    content: "";
+    position: absolute;
+    @include square(14px);
+    translate: -100% 50%;
+    background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
   }
 }
 
+.dropListButton .open {
+  &::before {
+    content: "";
+    position: absolute;
+    @include square(14px);
+    top: calc(var(--button-height) / 2);
+    left: 100%;
+    translate: -100% -50%;
+    background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
+  }
+}
 
+.modalButtons {
+  display: flex;
+  margin-top: 10px;
+}
 
+.modalProps {
+  text-align: left;
+  width: 100%;
+}
+
+.canselModal {
+  margin-left: 10px;
+}
+
+.dropdown {
+  margin: 10px;
+}
