--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -2,7 +2,7 @@
 
 .Input {
   height: var(--input-height);
-  width: 272px;
+  width: 100%;
   padding: 4px 6px;
   border: 1px solid var(--Input-border-color);
   border-radius: var(--border-radius);
