--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -438,9 +438,13 @@
     }
 }
 
-.closeModal {
+.closeModalCross {
     align-self: flex-end;
     margin-top: -15px;
+}
+
+.closeModalBtn {
+    background-image: url(../../assets/icons/buttons/circle-crossed.svg);
 }
 
 .closeButton-small {
