--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -12,6 +12,7 @@
     border-radius: var(--border-radius);
     color: var(--color-theme);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 3;
 }
 
 .open {
@@ -31,4 +32,9 @@
     justify-content: flex-end;
     column-gap: 15px;
     margin-top: -20px;
+}
+
+.petModal { 
+    width: 700px;
+    
 }
