--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -3,7 +3,8 @@
 .Select {
     border-radius: var(--border-radius);
 
-    width: 100px;
+    width: 100%;
+    height: var(--input-height);
     
     @include hover {
         border-color: var(--color-purple-dark);
