--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -494,3 +494,9 @@
         border-color: var(--color-purple);
     }
 }
+
+.okButton {
+    background-color: var(--color-purple-light);
+    color: var(--color-light);
+    background-image: url(../../assets/icons/buttons/check-tick-svgrepo-com.svg);  
+}
