--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -22,7 +22,11 @@
     --color-button-crud-hover-bg-light-theme: #cecece;
     --color-button-crud-hover-bg-dark-theme: #8298b0;
 
-
+    --event-yellow: #FFE2AD;
+    --event-red: #FFC8D0;
+    --event-green: #BAF2D8;
+    --event-purple: #D6D0FF;
+    --event-blue: #BAF7FF;
 
     --border-radius: 5px;
 
@@ -41,12 +45,6 @@
 
     --font-size-xs: 13px;
     --font-size-s: 16px;
-
-    @include calendar-event(event-red, #DF6679, #FFC8D0);
-    @include calendar-event(event-green, #23BA75, #BAF2D8);
-    @include calendar-event(event-yellow, #E3A023, #FFE2AD);
-    @include calendar-event(event-purple, #6E64B9, #D6D0FF);
-    @include calendar-event(event-blue, #249FAF, #BAF7FF);
 
     @include desktop {
         --section-padding-y: 10px;
