--- a/src/pages/VisitPage/ui/PageMode/Calendar/CalendarVisitPageMode.module.scss
+++ b/src/pages/VisitPage/ui/PageMode/Calendar/CalendarVisitPageMode.module.scss
@@ -1,3 +1,4 @@
+@import '/src/app/styles/index.scss';
 
 .container {
     padding: 12px;
@@ -39,4 +40,65 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+}
+
+.visitTypeList {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    list-style: none;
+    font-size: 14px;
+}
+
+.inputWrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    column-gap: 15px;
+    user-select: none;
+
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+
+.radioWrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    column-gap: 15px;
+    user-select: none;
+}
+
+.calendarMode {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+.REGULAR_CHECKUP, .DISEASE_TREATMENT, .RECHARGE, .STATUS_CONDITION_HEALING, .OTHER {
+    @include square(15px);
+}
+
+.DISEASE_TREATMENT {
+    background-color: var(--event-red);
+}
+
+.RECHARGE {
+    background-color: var(--event-green);
+}
+
+.STATUS_CONDITION_HEALING {
+    background-color: var(--event-yellow);
+}
+
+.REGULAR_CHECKUP {
+    background-color: var(--event-blue);
+}
+
+.OTHER {
+    background-color: var(--event-purple);
 }
