--- a/src/widgets/Calendars/CalendarDay/ui/CalendarDay.module.scss
+++ b/src/widgets/Calendars/CalendarDay/ui/CalendarDay.module.scss
@@ -3,6 +3,7 @@
 
 .table {
 
+    user-select: none;
     font-weight: 500;
     font-size: 14px;
 
@@ -22,8 +23,19 @@
 
     th, td {
         text-align: left;
-        padding: 1px;
+        padding: 0;
+        height: 20px !important;
         background-color: var(--bg-color);
+    }
+
+    tr:hover td {
+        background-color: inherit !important;
+        opacity: 1 !important;
+    }
+
+    tbody tr:nth-child(even) {
+        background-color: inherit !important;
+        opacity: 1 !important;
     }
 
     .timeColumn {
@@ -38,31 +50,34 @@
         color: var(--color-theme);
         border-bottom: 3px solid var(--color-purple-light);
     }
-    
-    .eventsContainer {
-        position: relative;
-        height: 19px;
-    }
 
-    .house {
+    .house, .halfHouse {
         &::after {
             @include abs-center;
             content: '';
             width: 100%;
             height: 1px;
+        }
+    }
+
+    .house {
+        &::after {
             border-bottom: 1px solid var(--color-gray);
         }
     }
 
     .halfHouse {
         &::after {
-            @include abs-center;
-            content: '';
-            width: 100%;
-            height: 1px;
             border-bottom: 1px dotted var(--color-gray);
         }
     }
+    
 
+    .eventsContainer {
+        user-select: none;
+        position: relative;
+        font-size: 13px;
+        color: var(--color-dark);
+    }
 }
 
