--- a/src/widgets/FilterModal/FilterModal.module.scss
+++ b/src/widgets/FilterModal/FilterModal.module.scss
@@ -14,11 +14,12 @@
 
 .propsWithButton {
   display: block;
-  min-width: none;
   min-height: 1200%;
   border: 1px solid var(--color-purple-light);
   border-radius: 6px;
   padding: 9px;
+  width: 100%;
+  height: 100%;
 }
 
 .activeProp button {
@@ -99,6 +100,14 @@
   }
 }
 
+.modal {
+  width: 100%;
+
+  input {
+    width: 100%;
+  } 
+}
+
 .modalButtons {
   display: flex;
   margin-top: 10px;
@@ -106,13 +115,231 @@
 
 .modalProps {
   text-align: left;
-  width: 100%;
+  width: 160%;
+}
+
+.modalOptions {
+  width: 20%;
+  height: 60%;
+  z-index: 10000;
+  
 }
 
 .canselModal {
   margin-left: 10px;
 }
 
+.search {
+  color: #ffffff;
+  background-color: #83c93c;
+  border-top-right-radius: 0%;
+  border-bottom-right-radius: 0%;
+  position: inherit;
+
+  background-image: url(../../shared/assets/icons/buttons/accent.svg);
+
+  @include hover {
+    background-color: #75b332 !important;
+  }
+}
+
+.resetFilter {
+  position: absolute;
+  color: #ffffff;
+  background-color: #83c93c;
+  border-top-left-radius: 0%;
+  border-bottom-left-radius: 0%;
+  width: 35px;
+  padding: 0;
+  background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
+
+  @include hover {
+    background-color: #75b332 !important;
+  }
+}
+
+.conditionButton {
+  margin-left: 50px;
+  color: var(--color-purple-light);
+}
+
+.filterPanel {
+  display: flex;
+}
+
+.filterButtonOpen {
+  @include square(15px);
+
+  position: relative;
+  padding: 5px;
+  background-color: var(--color-gray);
+  border-radius: 100%;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 45%;
+    height: 2.5px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    translate: -85% -50%;
+  }
+
+  &::before {
+    rotate: -45deg;
+  }
+
+  &::after {
+    rotate: 45deg;
+    translate: -30% -50%;
+  }
+
+  &:not(:disabled) {
+    @include hover {
+      opacity: 0.7;
+    }
+  }
+}
+
+.filterButtonClosed {
+  @include square(15px);
+
+  position: relative;
+  padding: 5px;
+  background-color: #ffffff;
+  border-radius: 100%;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 45%;
+    height: 2.5px;
+    background-color: var(--color-purple-light);
+    border-radius: 5px;
+    translate: -85% -50%;
+  }
+
+  &::before {
+    rotate: 45deg;
+  }
+
+  &::after {
+    rotate: -45deg;
+    translate: -30% -50%;
+  }
+
+  &:not(:disabled) {
+    @include hover {
+      opacity: 0.7;
+    }
+  }
+}
+
+.closedPanel {
+  display: block;
+  border: 1px var(--color-purple-light) solid;
+  width: 100%;
+  border-radius: 6px;
+  padding: 9px;
+  background-color: var(--color-purple-light);
+
+  p {
+    color: #ffffff;
+    margin-left: 15px;
+    font-size: 14px;
+  }
+}
+
+.openedPanel {
+  display: block;
+  border: 1px var(--color-purple-light) solid;
+  width: 100%;
+  border-radius: 6px;
+  padding: 9px;
+
+  p {
+    margin-left: 15px;
+    font-size: 14px;
+  }
+
+  .filterDownPanel {
+    margin-left: 5%;
+    margin-top: 15px;
+    
+  }
+}
+
 .dropdown {
-  margin: 10px;
+  width: 35%;
+  margin-top: 10px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    @include square(14px);
+    translate: 40% 0%;
+    background-image: url(../../shared/assets/icons/dropArrow/drop-down.svg);
+  }
+}
+
+.dropdownData {
+  display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 6px;
+
+  .option {
+    width: 100%;
+    text-align: left;
+
+    &:hover {
+      background-color: var(--color-purple-light);
+    }
+  }
+
+  .optionUp {
+    width: 100%;
+    text-align: left;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+
+    &:hover {
+      background-color: var(--color-purple-light);
+    }
+  }
+
+  .optionDown {
+    width: 100%;
+    text-align: left;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+
+    &:hover {
+      background-color: var(--color-purple-light);
+    }
+  }
+}
+
+.optionsButton {
+  @include square(30px);
+  left: 98%;
+  margin: 0;
+
+  position: absolute;
+  padding: 5px;
+  color: #ffffff;
+  background-color: var(--color-gray);
+
+  background-image: url(../../shared/assets/icons/navDropList/admin.svg);
+  background-size: 40%;
+  translate: -100% 0%;
+
+  @include hover {
+    background-color: #75b332 !important;
+  }
 }
